--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,18 +3,16 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --blue:#202e52
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
   }
-}
+} */
 
 body {
   color: rgb(var(--foreground-rgb));
@@ -25,7 +23,18 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
-
+.bg-primary{
+  background-color: #ecd06f;
+}
+.text-primary{
+  color: #ecd06f;
+}
+.bg-secondary{
+  background-color: #202e52;
+}
+.text-secondary{
+  color: #202e52;
+}
 @layer utilities {
   .text-balance {
     text-wrap: balance;
